add monitor iostat and sar info
add monitor iostat and sar info

--- a/userparameter_diskstats.conf
+++ b/userparameter_diskstats.conf
@@ -1,4 +1,6 @@
-UserParameter=custom.vfs.discover_disks,/usr/local/bin/lld-disks.py
+UserParameter=custom.vfs.discover_disks,/usr/local/zabbix-agent/scripts/lld-disks.py
+UserParameter=epmmm.get.iostat.info[*],/usr/local/zabbix-agent/scripts/epmmm_get_iostat_info_wrapper.sh $1
+UserParameter=epmmm.get.sar-d-p.info[*],/usr/local/zabbix-agent/scripts/epmmm_get_sar-d-p_info_wrapper.sh $1
 
 UserParameter=custom.vfs.dev.read.ops[*],awk '{print $$1}' /sys/class/block/$1/stat
 UserParameter=custom.vfs.dev.read.merged[*],awk '{print $$2}' /sys/class/block/$1/stat
